--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -30,7 +30,8 @@
     </h1>
     <p>
       In
-      <span class"glyphicon glyphicon-book">Bookers,</span>
+      <span class="glyphicon glyphicon-book"></span>
+      Bookers,
     </p>
     <p>you can share and exchange  your opinions , impressions , and emotions</p>
     <p> about various books!</p>
