--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -26,7 +26,7 @@
   <div class="col-xs-4 col-md-6 col-xs-offset-3">
     <h1>
       welcome to
-      <span class="glyphicon glyphicon-book"></span>Bookers  !!
+      <span class="glyphicon glyphicon-book"><strong>Bookers  !!</strong></span>
     </h1>
     <p>
       In
